--- a/search.html
+++ b/search.html
@@ -36,7 +36,7 @@
         <div id="containerClothing">
             <!-- JS rendered code -->
             <p>
-                Không có sản phẩm
+                No product
             </p>
         </div>
     </div>
